fix: random check on font-stretch

--- a/foundations/intro-to-css/05-descendant-combinator/style.css
+++ b/foundations/intro-to-css/05-descendant-combinator/style.css
@@ -3,4 +3,5 @@
     color: rgb(255, 0, 0);
     font-size: 20px;
     text-align: center;
+    font-stretch: ultra-condensed;
 }
